Added local and ci tests