@@ -5,8 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
  
     <groupId>myTests</groupId>
-    <artifactId>integrationtest</artifactId>
+    <artifactId>functionalTests</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven-surefire-plugin.version>2.8</maven-surefire-plugin.version>
+    </properties>
  
     <dependencies>
         <dependency>
@@ -18,16 +21,56 @@
  
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium</artifactId>
-            <version>2.0a6</version>
+            <artifactId>selenium-java</artifactId>
+            <version>2.5.0</version>
         </dependency>
  
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.0a6</version>
-        </dependency>
     </dependencies>
 
+  <profiles>
+
+        <profile>
+            <id>ciFunctional</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <forkMode>once</forkMode>
+                            <argLine>-Xmx1G -XX:MaxPermSize=512m</argLine>
+                            <testFailureIgnore>false</testFailureIgnore>
+                            <excludes>
+                                <exclude>%regex[.*[a-z]LocalTest.*]</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>functional</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <forkMode>once</forkMode>
+                            <argLine>-Xmx1G -XX:MaxPermSize=512m</argLine>
+                            <testFailureIgnore>false</testFailureIgnore>
+                            <excludes>
+                                <exclude>%regex[.*[a-z]CiTest.*]</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+  </profiles>
     
 </project>
